--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,3 +1,25 @@
+footer .container,
+header .container {
+  width: 100%;
+  max-width: 1200px;
+  background: green;
+  margin: 0 auto;
+}
+
+header .container {
+  display: flex;
+  justify-content: space-between;
+  padding: 10px;
+  border-bottom: 1px solid black;
+}
+
+footer .container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
 * {
   margin: 0;
   padding: 0;
