--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,15 +1,15 @@
+section .container,
 footer .container,
 header .container {
   width: 100%;
   max-width: 1200px;
-  background: green;
   margin: 0 auto;
+  padding: 10px;
 }
 
 header .container {
   display: flex;
   justify-content: space-between;
-  padding: 10px;
   border-bottom: 1px solid black;
 }
 
@@ -18,6 +18,10 @@ footer .container {
   flex-direction: column;
   align-items: center;
   justify-content: center;
+}
+
+section .container .pitch-title {
+  text-align: center;
 }
 
 * {
