--- a/src/scss/header.scss
+++ b/src/scss/header.scss
@@ -3,6 +3,15 @@ header {
     @extend %container-base;
     display: flex;
     justify-content: space-between;
+    align-items: center;
     border-bottom: 1px solid black;
+
+    #site-logo{
+      width: 200px;
+      height: 50px;
+      background-image: url(https://teambit.io/wp-content/themes/teambeat/img/logo.svg);
+      background-position: left center;
+      background-repeat: no-repeat;
+    }
   } 
 }
