--- a/src/scss/section.scss
+++ b/src/scss/section.scss
@@ -1,9 +1,22 @@
 section {
   .container{
     @extend %container-base;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
+  }
+}
 
-    .pitch-title {
-      text-align: center;
-    }
+#sect-pitch{
+
+  .pitch-title, .call-to-action, .img-main{
+    margin: 20px auto;
+    text-align: center;
+    width: 100%;
+  }
+
+  .img-main{
+    max-width: 570px;
   }
 }
