--- a/public/css/style.css
+++ b/public/css/style.css
@@ -29,6 +29,20 @@ footer .container {
   justify-content: center;
 }
 
+#sect-pitch-2 .img-main,
+#sect-pitch-2 .pitch-title,
+#sect-pitch-2 .pitch-block,
+#sect-pitch .pitch-title,
+#sect-pitch .call-to-action,
+#sect-pitch .img-main {
+  margin: 20px auto;
+  text-align: center;
+}
+
+section .img-small {
+  width: 140px;
+}
+
 section .container {
   display: flex;
   flex-wrap: wrap;
@@ -36,16 +50,17 @@ section .container {
   justify-content: center;
 }
 
-#sect-pitch .pitch-title,
-#sect-pitch .call-to-action,
 #sect-pitch .img-main {
-  margin: 20px auto;
-  text-align: center;
+  max-width: 570px;
+}
+
+#sect-pitch-2 .pitch-title,
+#sect-pitch-2 .pitch-block {
   width: 100%;
 }
 
-#sect-pitch .img-main {
-  max-width: 570px;
+#sect-pitch-2 .img-main img {
+  max-width: 280px;
 }
 
 * {
@@ -58,5 +73,11 @@ section .container {
 
 .bg-salmon {
   background: #ffe7d2;
+}
+
+hr {
+  width: 90%;
+  max-width: 1200px;
+  margin: 0 auto;
 }
 
